trunk/Archive2/ed/9aaaa2dc8065cc/output
main.cpp: In function 'int main()':
main.cpp:6:28: error: expected primary-expression before 'auto'
     operator<<(std::cout, (auto i = {1, 2, 3}).size());
                            ^
main.cpp:6:28: error: expected ')' before 'auto'
