trunk/Archive2/ed/9aaaa2dc8065cc/main.cpp
#include <iostream>
#include <initializer_list>

int main()
{
    operator<<(std::cout, (auto i = {1, 2, 3}).size());
}
